--- a/angular.json
+++ b/angular.json
@@ -86,9 +86,10 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-              "src/styles.css"
-            ],
+           "styles": [
+           "node_modules/bootstrap/dist/css/bootstrap.min.css",
+           "src/styles.css"
+           ],
             "scripts": []
           }
         }
